--- a/PuzzlePlatforms/Config/DefaultEngine.ini
+++ b/PuzzlePlatforms/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/PuzzlePlatforms/Maps/Lobby.Lobby
-EditorStartupMap=/Game/PuzzlePlatforms/Maps/Lobby.Lobby
+GameDefaultMap=/Game/MenuSysytem/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/MenuSysytem/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/PuzzlePlatforms.PuzzlePlatformsGameMode"
 GameInstanceClass=/Script/PuzzlePlatforms.PuzzlePlatformGameInstance
 
